Added CERP.Modules.Models project

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ CERP.Modules.Security/bin/
 CERP.Modules.Security/obj/
 CERP.Modules.Security.Tests/bin/
 CERP.Modules.Security.Tests/obj/
+CERP.Modules.Models/bin/
+CERP.Modules.Models/obj/
