--- a/CERP.Core/CERP.Core.csproj
+++ b/CERP.Core/CERP.Core.csproj
@@ -39,8 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Application.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\IAuthenticationService.cs" />
+    <Compile Include="Security\Principal\IUserIdentity.cs" />
+    <Compile Include="Security\Principal\IUserPrincipal.cs" />
+    <Compile Include="Security\Roles.cs" />
+    <Compile Include="Security\Session.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
