Added implementations of IUserPrincipal, IAuthenticationService and SessionService Added SecurityModuleSettings class

--- a/CERP.Modules.Security/CERP.Modules.Security.csproj
+++ b/CERP.Modules.Security/CERP.Modules.Security.csproj
@@ -49,8 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Principal\UserPrincipal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityModule.cs" />
+    <Compile Include="SecurityModuleSettings.cs" />
+    <Compile Include="Services\DatabaseAuthenticationService.cs" />
+    <Compile Include="SessionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CERP.Core\CERP.Core.csproj">
