--- a/CERP.Modules.Security/CERP.Modules.Security.csproj
+++ b/CERP.Modules.Security/CERP.Modules.Security.csproj
@@ -61,6 +61,10 @@
       <Project>{31588f31-2c0d-4bd0-8ad4-310859094d9c}</Project>
       <Name>CERP.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CERP.Modules.Models\CERP.Models.csproj">
+      <Project>{21a73cd5-a6be-49ff-be2a-c2e5226d090d}</Project>
+      <Name>CERP.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Exceptions\" />
