--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CERP.Main\packages.config" />
   <repository path="..\CERP.Modules.Models\packages.config" />
   <repository path="..\CERP.Modules.Security.Tests\packages.config" />
   <repository path="..\CERP.Modules.Security\packages.config" />
