--- a/CERP.Modules.Security/CERP.Modules.Security.csproj
+++ b/CERP.Modules.Security/CERP.Modules.Security.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Apex.Common">
+      <HintPath>..\..\..\Reusables\Apex.Common\bin\Debug\Apex.Common.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.0.2\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -51,6 +54,8 @@
   <ItemGroup>
     <Compile Include="Principal\UserPrincipal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
+    <Compile Include="SecurityDataContext.cs" />
     <Compile Include="SecurityModule.cs" />
     <Compile Include="SecurityModuleSettings.cs" />
     <Compile Include="Services\DatabaseAuthenticationService.cs" />
