--- a/CERP.Modules.Security.Tests/CERP.Modules.Security.Tests.csproj
+++ b/CERP.Modules.Security.Tests/CERP.Modules.Security.Tests.csproj
@@ -60,6 +60,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DatabaseAuthenticationServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
