--- a/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
+++ b/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
@@ -50,12 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataManagementModule.cs" />
+    <Compile Include="Domain\Product.cs" />
+    <Compile Include="IProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
