--- a/CERP.Modules.DataManagement.Tests/CERP.Modules.DataManagement.Tests.csproj
+++ b/CERP.Modules.DataManagement.Tests/CERP.Modules.DataManagement.Tests.csproj
@@ -60,7 +60,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DataManagementTest.cs" />
+    <Compile Include="ProductServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
