--- a/CERP.Modules.Models/CERP.Models.csproj
+++ b/CERP.Modules.Models/CERP.Models.csproj
@@ -44,6 +44,11 @@
     <Compile Include="Address.cs" />
     <Compile Include="AddressType.cs" />
     <Compile Include="BusinessEntity.cs" />
+    <Compile Include="Business\Partner.cs" />
+    <Compile Include="Business\PartnerType.cs" />
+    <Compile Include="Inventory\Product.cs" />
+    <Compile Include="Inventory\ProductCategory.cs" />
+    <Compile Include="Business\TaxPayer.cs" />
     <Compile Include="Contact.cs" />
     <Compile Include="ContactType.cs" />
     <Compile Include="CountryRegion.cs" />
@@ -54,6 +59,8 @@
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerAddress.cs" />
     <Compile Include="Individual.cs" />
+    <Compile Include="Business\Manufacturer.cs" />
+    <Compile Include="Inventory\UnitMeasure.cs" />
     <Compile Include="ProductVendor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseOrderDetail.cs" />
