--- a/CERP.Modules.Procurement/CERP.Modules.Procurement.csproj
+++ b/CERP.Modules.Procurement/CERP.Modules.Procurement.csproj
@@ -39,7 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\OrderDetail.cs" />
+    <Compile Include="Domain\Product.cs" />
+    <Compile Include="Domain\PurchaseOrder.cs" />
+    <Compile Include="Domain\OrderStatus.cs" />
+    <Compile Include="Domain\UnitMeasure.cs" />
+    <Compile Include="IPurchaseOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\PurchaseOrderService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
