Added Apex.Common Project to solution Added EntityFramework package to Apex.Common and Procurement Module

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ CERP.Modules.Procurement.Tests/bin/
 CERP.Modules.Procurement.Tests/obj/
 CERP.Modules.Procurement/bin/
 CERP.Modules.Procurement/obj/
+Apex.Common/_ReSharper.Apex.Common/
+Apex.Common/bin/
+Apex.Common/obj/
