--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Apex.Common\packages.config" />
   <repository path="..\CERP.Main\packages.config" />
   <repository path="..\CERP.Modules.DataManagement.Tests\packages.config" />
   <repository path="..\CERP.Modules.DataManagement\packages.config" />
   <repository path="..\CERP.Modules.Models\packages.config" />
+  <repository path="..\CERP.Modules.Procurement\packages.config" />
   <repository path="..\CERP.Modules.Security.Tests\packages.config" />
   <repository path="..\CERP.Modules.Security\packages.config" />
 </repositories>
