--- a/Apex.Common/Apex.Common.csproj
+++ b/Apex.Common/Apex.Common.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MVVM\ViewModelBase.cs" />
     <Compile Include="MVVM\WorkspaceViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
