--- a/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
+++ b/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
@@ -61,6 +61,8 @@
     <Compile Include="IProductService.cs" />
     <Compile Include="ISupplierService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Services\ManufacturerService.cs" />
     <Compile Include="Services\ProductService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -71,6 +73,10 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Apex.Common\Apex.Common.csproj">
+      <Project>{62d207fb-8713-4b55-bebb-9d90fd78f0df}</Project>
+      <Name>Apex.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CERP.Modules.Models\CERP.Models.csproj">
       <Project>{21a73cd5-a6be-49ff-be2a-c2e5226d090d}</Project>
       <Name>CERP.Models</Name>
