--- a/CERP.Modules.DataManagement.Tests/CERP.Modules.DataManagement.Tests.csproj
+++ b/CERP.Modules.DataManagement.Tests/CERP.Modules.DataManagement.Tests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="ProductServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SupplierServicesTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CERP.Core\CERP.Core.csproj">
