--- a/CERP.Modules.Procurement/CERP.Modules.Procurement.csproj
+++ b/CERP.Modules.Procurement/CERP.Modules.Procurement.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Domain\Product.cs" />
     <Compile Include="Domain\PurchaseOrder.cs" />
     <Compile Include="Domain\OrderStatus.cs" />
+    <Compile Include="Domain\UnitMeasure.cs" />
     <Compile Include="IPurchaseOrderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\PurchaseOrderService.cs" />
