--- a/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
+++ b/CERP.Modules.DataManagement/CERP.Modules.DataManagement.csproj
@@ -69,7 +69,7 @@
     <Compile Include="IUnitMeasureService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CustomerService.cs" />
-    <Compile Include="Services\Repository\ProductRepository.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Services\LocationService.cs" />
     <Compile Include="Services\ManufacturerService.cs" />
     <Compile Include="Services\ProductService.cs" />
