--- a/CERP.Modules.Security.Tests/CERP.Modules.Security.Tests.csproj
+++ b/CERP.Modules.Security.Tests/CERP.Modules.Security.Tests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="DatabaseAuthenticationServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CERP.Core\CERP.Core.csproj">
