--- a/Apex.Common/Apex.Common.csproj
+++ b/Apex.Common/Apex.Common.csproj
@@ -49,12 +49,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cryptography\HashAlgorithms.cs" />
+    <Compile Include="Cryptography\EncryptionService.cs" />
     <Compile Include="Data\EntityFrameworkRepository.cs" />
     <Compile Include="Data\IRepository.cs" />
     <Compile Include="Data\IUnitOfWork.cs" />
     <Compile Include="MVVM\RelayCommand.cs" />
     <Compile Include="MVVM\ViewModelBase.cs" />
     <Compile Include="MVVM\WorkspaceViewModel.cs" />
+    <Compile Include="Net\EmailAccount.cs" />
+    <Compile Include="Net\IMailService.cs" />
+    <Compile Include="Net\Mail.cs" />
+    <Compile Include="Net\MailService.cs" />
+    <Compile Include="Net\MailServiceConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
   </ItemGroup>
@@ -62,6 +69,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
