Added CERP.Modules.HumanResources project

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ CERP.Modules.Procurement/obj/
 Apex.Common/_ReSharper.Apex.Common/
 Apex.Common/bin/
 Apex.Common/obj/
+CERP.Modules.HumanResources/obj/
+CERP.Modules.HumanResources/bin/
