--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\CERP.Main\packages.config" />
   <repository path="..\CERP.Modules.DataManagement.Tests\packages.config" />
   <repository path="..\CERP.Modules.DataManagement\packages.config" />
+  <repository path="..\CERP.Modules.HumanResources\packages.config" />
   <repository path="..\CERP.Modules.Models\packages.config" />
   <repository path="..\CERP.Modules.Procurement\packages.config" />
   <repository path="..\CERP.Modules.Security.Tests\packages.config" />
