--- a/CERP.Modules.Security/packages.config
+++ b/CERP.Modules.Security/packages.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Data" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.ExceptionHandling" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net45" />
+  <package id="EnterpriseLibrary.Validation" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.2" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
 </packages>
