Added Test Project for CERP.Modules.HumanResources Added CERP.Modules.HumanResources.Controls library Added ViewModels and Views for Employee management

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ Apex.Common/bin/
 Apex.Common/obj/
 CERP.Modules.HumanResources/obj/
 CERP.Modules.HumanResources/bin/
+CERP.Modules.HumanResources.Controls/bin/
+CERP.Modules.HumanResources.Controls/obj/
+CERP.Modules.HumanResources.Tests/obj/
+CERP.Modules.HumanResources.Tests/bin/
