--- a/CERP.Modules.HumanResources.Controls/CERP.Modules.HumanResources.Controls.csproj
+++ b/CERP.Modules.HumanResources.Controls/CERP.Modules.HumanResources.Controls.csproj
@@ -30,14 +30,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Charts.v12.2.Core, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.CodeParser.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.Data.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Office.v12.2.Core, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.PivotGrid.v12.2.Core, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Printing.v12.2.Core, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.RichEdit.v12.2.Core, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.Utils.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.Utils.v12.2.UI, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraBars.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraCharts.v12.2.Extensions, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraCharts.v12.2.Wizard, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraEditors.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraGrid.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraNavBar.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraPivotGrid.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraPrinting.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraReports.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraReports.v12.2.Extensions, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraRichEdit.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraTreeList.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraVerticalGrid.v12.2, Version=12.2.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.OracleClient" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -74,6 +99,32 @@
     <Compile Include="EmployeeManagement\Views\EmploymentInformationView.Designer.cs">
       <DependentUpon>EmploymentInformationView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Payroll\Reports\PaySlip.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Payroll\Reports\PaySlip.Designer.cs">
+      <DependentUpon>PaySlip.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Payroll\PayrollShell.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Payroll\PayrollShell.Designer.cs">
+      <DependentUpon>PayrollShell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Payroll\ViewModels\EmployeePayrollViewModel.cs" />
+    <Compile Include="Payroll\ViewModels\PayrollInformationViewModel.cs" />
+    <Compile Include="Payroll\Views\PayrollGridView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Payroll\Views\PayrollGridView.Designer.cs">
+      <DependentUpon>PayrollGridView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Payroll\Views\PayrollHeaderView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Payroll\Views\PayrollHeaderView.Designer.cs">
+      <DependentUpon>PayrollHeaderView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -89,6 +140,18 @@
     <EmbeddedResource Include="EmployeeManagement\Views\EmploymentInformationView.resx">
       <DependentUpon>EmploymentInformationView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Payroll\Reports\PaySlip.resx">
+      <DependentUpon>PaySlip.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payroll\PayrollShell.resx">
+      <DependentUpon>PayrollShell.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payroll\Views\PayrollGridView.resx">
+      <DependentUpon>PayrollGridView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payroll\Views\PayrollHeaderView.resx">
+      <DependentUpon>PayrollHeaderView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
   </ItemGroup>
   <ItemGroup>
@@ -101,6 +164,7 @@
   <ItemGroup>
     <None Include="Properties\DataSources\CERP.Modules.HumanResources.Controls.EmployeeManagement.ViewModels.LookUpViewModel.datasource" />
     <None Include="Properties\DataSources\CERP.Modules.HumanResources.Controls.EmployeeManagement.ViewModels.PersonalInformationViewModel.datasource" />
+    <None Include="Properties\DataSources\CERP.Modules.HumanResources.Controls.Payroll.ViewModels.EmployeePayrollViewModel.datasource" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
